@@ -5,11 +5,15 @@ import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
+import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.xml.sax.SAXException;
 import timofey.config.SourceInit;
 import timofey.db.services.NewsArticleServiceImpl;
+import timofey.db.services.UserServiceImpl;
 import timofey.entities.NewsArticle;
+import timofey.entities.User;
 import timofey.meta.usersMeta.KeyboardMeta;
+import timofey.meta.usersMeta.SubscribedResources;
 import timofey.utils.enums.Commands;
 import timofey.utils.enums.Sources;
 import timofey.xmlParser.AbstractParserFactory;
@@ -18,7 +22,7 @@ import timofey.xmlParser.ParserFactory;
 import javax.xml.parsers.ParserConfigurationException;
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
+
 /**
  * класс для обработки callback сообщений
  * Есть Callback, а есть просто текст
@@ -38,6 +42,8 @@ public class CallBackQueryHandler {
     private InlineKeyboardMarkup reutersTopicsKeyboard;
     private SourceInit rssResources;
     private NewsArticleServiceImpl newsArticleService;
+    private UserServiceImpl userService;
+    private SubscribedResources subscribedResources;
     private List<SendMessage> messageList;
     private static final int MAX_MESSAGE_SIZE = 4096;
     private KeyboardMeta keyboardMeta;
@@ -52,7 +58,9 @@ public class CallBackQueryHandler {
             @Qualifier("reutersTopicsKeyboard") InlineKeyboardMarkup reutersTopicsKeyboard,
             KeyboardMeta keyboardMeta,
             SourceInit sourceInit,
-            NewsArticleServiceImpl newsArticleService
+            NewsArticleServiceImpl newsArticleService,
+            UserServiceImpl userService,
+            SubscribedResources subscribedResources
             ) {
 
         this.replyMessage = new SendMessage();
@@ -66,6 +74,8 @@ public class CallBackQueryHandler {
         this.reutersTopicsKeyboard = reutersTopicsKeyboard;
         this.rssResources = sourceInit;
         this.newsArticleService = newsArticleService;
+        this.userService = userService;
+        this.subscribedResources = subscribedResources;
         this.keyboardMeta = keyboardMeta;
     }
 
@@ -76,116 +86,180 @@ public class CallBackQueryHandler {
     public List<SendMessage> getReplyMessage() throws ParserConfigurationException, SAXException, IOException {
 
         messageList = new ArrayList<>();
-        Long userId = callbackQuery.getMessage().getChatId();
+        Long chatId = callbackQuery.getMessage().getChatId();
+        User user = userService.findByChatId(chatId);
+        if (user == null) {
+            Long userId = callbackQuery.getFrom().getId();
+            String userName = callbackQuery.getFrom().getUserName();
+            user = new User()
+                    .setTelegramUserID(userId)
+                    .setChatId(chatId)
+                    .setUserName(userName);
+            userService.save(user);
+        }
         String userMessage = callbackQuery.getData();
-        replyMessage.setChatId(userId);
-        Stack<InlineKeyboardMarkup> usersKeyboards = keyboardMeta.getKeyboardByUserId(userId);
+        replyMessage.setChatId(chatId);
+        Stack<InlineKeyboardMarkup> usersKeyboards = keyboardMeta.getKeyboardByUserId(chatId);
         if(usersKeyboards.size() == 0) usersKeyboards.add(defaultKeyboard);
 
         if(!userMessage.isEmpty()){
             //идет проверка на тип сообщения, переделать на switch case для удобного понимания
-            if (Arrays.stream(Sources.values()).map(x->x.name().toLowerCase()).collect(Collectors.toList()).contains(userMessage.toLowerCase())){
+            if (Arrays.stream(Sources.values()).map(x->x.name().toLowerCase()).toList().contains(userMessage.toLowerCase()))
+                selectCertainSource(userMessage, usersKeyboards);
 
-                if(userMessage.equals(Sources.CNBC.name())){
-                    replyMessage.setReplyMarkup(cnbcTopicsKeyboard);
-                    usersKeyboards.add(cnbcTopicsKeyboard);
-                }
-                else if(userMessage.equals(Sources.Reuters.name())){
-                    replyMessage.setReplyMarkup(reutersTopicsKeyboard);
-                    usersKeyboards.add(reutersTopicsKeyboard);
-                }
+            else if (rssResources.getResourceMap().containsKey(userMessage))
+                selectTopic(chatId, userMessage, usersKeyboards);
 
-                else replyMessage.setReplyMarkup(defaultKeyboard);
+            else if (userMessage.equals(Commands.subscription.name()))
+                goIntoMenuSection(subMenu, "Параметры подписки", usersKeyboards);
 
-                replyMessage.setText("Выберите тему новостей");
-                messageList.add(replyMessage);
-            }
+            else if(userMessage.equals(Commands.certainSourceSub.name()))
+                goIntoMenuSection(sourceMultipleChoice, "Выбор ресурса для подписки", usersKeyboards);
 
-            else if (rssResources.getResourceMap().containsKey(userMessage)){
-                for (String key : rssResources.getResourceMap().keySet()) {
-                    String topic = key.split("\\.")[1];
-                    if(userMessage.equals(key)){
+            else if(userMessage.equals(Commands.cnbcSub.name()))
+                goIntoTopicSubscriptionMenu(chatId, optionCnbcChoice, usersKeyboards);
 
-                        ParserFactory factory = null;
-                        String sourceType = key.split("\\.")[0];
-                        if(sourceType.equals(Sources.Reuters.name().toLowerCase()))
-                            factory =  AbstractParserFactory.initParserFactory(Sources.Reuters);
-                        else if (sourceType.equals(Sources.CNBC.name().toLowerCase()))
-                            factory = AbstractParserFactory.initParserFactory(Sources.CNBC);
+            else if (userMessage.equals(Commands.reutersSub.name()))
+                goIntoTopicSubscriptionMenu(chatId, optionReutersChoice, usersKeyboards);
 
-                        Parser parser = factory.createFactory();
-                        List<NewsArticle> list = parser.parse(rssResources.getResourceMap().get(key));
-                        StringBuilder sb = new StringBuilder();
-                        for (int i = 0; i < list.size(); i++){
-                            NewsArticle article = list.get(i);
-                            article.setTopic(topic);
-                            replyMessage = new SendMessage();
-                            replyMessage.setChatId(userId);
-                            if(sb.toString().length() + article.toString().length() <= MAX_MESSAGE_SIZE ){
-                                sb.append(article.toString());
-                            }
-                            else {
-                                replyMessage.setText(sb.toString());
-                                replyMessage.setReplyMarkup(null);
-                                messageList.add(replyMessage);
-                                sb = new StringBuilder();
-                            }
-                        }
-                        replyMessage.setText(sb.toString());
-                        replyMessage.setReplyMarkup(usersKeyboards.peek());
-                        messageList.add(replyMessage);
-                    }
-
-                }
-            }
-
-            else if (userMessage.equals(Commands.subscription.name())) {
-                replyMessage.setReplyMarkup(subMenu);
-                replyMessage.setText("Параметры подписки");
-                usersKeyboards.add(subMenu);
-
-                messageList.add(replyMessage);
-            }
-            else if(userMessage.equals(Commands.certainSourceSub.name())){
-                replyMessage.setReplyMarkup(sourceMultipleChoice);
-                replyMessage.setText("Выбор ресурса для подписки");
-                usersKeyboards.add(sourceMultipleChoice);
-
-                messageList.add(replyMessage);
-
-            }
-            else if(userMessage.equals(Commands.cnbcSub.name())){
-                replyMessage.setReplyMarkup(optionCnbcChoice);
-                replyMessage.setText("Выберите темы");
-                usersKeyboards.add(optionCnbcChoice);
-
-                messageList.add(replyMessage);
-            }
-            else if (userMessage.equals(Commands.reutersSub.name())) {
-                replyMessage.setReplyMarkup(optionReutersChoice);
-                replyMessage.setText("Выберите темы");
-                usersKeyboards.add(optionReutersChoice);
-
-                messageList.add(replyMessage);
-            }
             else if(userMessage.equals("back")) {
-                InlineKeyboardMarkup previousKeyboard = back2previousKeyboard(userId);
-                replyMessage.setReplyMarkup(previousKeyboard);
-                messageList.add(replyMessage);
+                goBack2previousKeyboard(chatId);
+            }
+            else if (usersKeyboards.lastElement().equals(optionCnbcChoice) ||
+                    usersKeyboards.lastElement().equals(optionReutersChoice)) {
+                subscribeToCertainSourceTopic(chatId, userMessage, usersKeyboards);
             }
 
         }
-        keyboardMeta.updateMeta(userId, usersKeyboards);
+        keyboardMeta.updateMeta(chatId, usersKeyboards);
         return messageList;
     }
 
-    private InlineKeyboardMarkup back2previousKeyboard(Long userId) {
-        Stack<InlineKeyboardMarkup> history = keyboardMeta.getKeyboardByUserId(userId);
+    private void subscribeToCertainSourceTopic(Long chatId, String userMessage, Stack<InlineKeyboardMarkup> usersKeyboards) {
+        String sourceType;
+        if (usersKeyboards.lastElement().equals(optionReutersChoice))
+            sourceType = "reuters";
+        else
+            sourceType = "cnbc";
+        String fullTopicName = sourceType + "." + userMessage;
+        if (rssResources.getResourceMap().containsKey(fullTopicName)) {
+            List<String> userResources = subscribedResources.getUserResourcesNamesByChatId(chatId);
+            if (userResources.contains(fullTopicName)) {
+                subscribedResources.unsubscribeUserFromResourceByChatIdAndResourceName(chatId, fullTopicName);
+                makeButtonDeselected(userMessage, usersKeyboards.lastElement().getKeyboard());
+            }
+            else {
+                subscribedResources.subscribeUserToResourceByChatIdAndResourceName(chatId, fullTopicName);
+                makeButtonSelected(userMessage, usersKeyboards.lastElement().getKeyboard());
+            }
+            messageList.add(replyMessage);
+        }
+    }
+
+    private void selectTopic(Long chatId, String userMessage, Stack<InlineKeyboardMarkup> usersKeyboards) {
+        for (String key : rssResources.getResourceMap().keySet()) {
+            String topic = key.split("\\.")[1];
+            if(userMessage.equals(key)){
+
+                ParserFactory factory = null;
+                String sourceType = key.split("\\.")[0];
+                if(sourceType.equals(Sources.Reuters.name().toLowerCase()))
+                    factory =  AbstractParserFactory.initParserFactory(Sources.Reuters);
+                else if (sourceType.equals(Sources.CNBC.name().toLowerCase()))
+                    factory = AbstractParserFactory.initParserFactory(Sources.CNBC);
+
+                Parser parser = factory.createFactory();
+                List<NewsArticle> list = parser.parse(rssResources.getResourceMap().get(key));
+                StringBuilder sb = new StringBuilder();
+                for (int i = 0; i < list.size(); i++){
+                    NewsArticle article = list.get(i);
+                    article.setTopic(topic);
+                    replyMessage = new SendMessage();
+                    replyMessage.setChatId(chatId);
+                    if(sb.toString().length() + article.toString().length() <= MAX_MESSAGE_SIZE ){
+                        sb.append(article.toString());
+                    }
+                    else {
+                        replyMessage.setText(sb.toString());
+                        replyMessage.setReplyMarkup(null);
+                        messageList.add(replyMessage);
+                        sb = new StringBuilder();
+                    }
+                }
+                replyMessage.setText(sb.toString());
+                replyMessage.setReplyMarkup(usersKeyboards.peek());
+                messageList.add(replyMessage);
+            }
+
+        }
+    }
+
+    private void goIntoTopicSubscriptionMenu(Long chatId,
+                                             InlineKeyboardMarkup menuMarkup,
+                                             Stack<InlineKeyboardMarkup> usersKeyboards
+    ) {
+        List<String> userResources = subscribedResources.getUserResourcesNamesByChatId(chatId);
+        for (String resource : userResources) {
+            String buttonText = resource.split("\\.")[1];
+            makeButtonSelected(buttonText, menuMarkup.getKeyboard());
+        }
+        goIntoMenuSection(menuMarkup, "Выберите темы", usersKeyboards);
+    }
+
+    private void goIntoMenuSection(InlineKeyboardMarkup menuMarkup,
+                                   String replyText,
+                                   Stack<InlineKeyboardMarkup> usersKeyboards
+    ) {
+        replyMessage.setReplyMarkup(menuMarkup);
+        replyMessage.setText(replyText);
+        usersKeyboards.add(menuMarkup);
+
+        messageList.add(replyMessage);
+    }
+
+    private void selectCertainSource(String userMessage, Stack<InlineKeyboardMarkup> usersKeyboards) {
+        if(userMessage.equals(Sources.CNBC.name()))
+            goIntoMenuSection(cnbcTopicsKeyboard, "Выберите тему новостей", usersKeyboards);
+        else if(userMessage.equals(Sources.Reuters.name()))
+            goIntoMenuSection(reutersTopicsKeyboard, "Выберите тему новостей", usersKeyboards);
+        else {
+            replyMessage.setReplyMarkup(defaultKeyboard);
+            messageList.add(replyMessage);
+        }
+    }
+
+    private void goBack2previousKeyboard(Long chatId) {
+        InlineKeyboardMarkup previousKeyboard;
+        Stack<InlineKeyboardMarkup> history = keyboardMeta.getKeyboardByUserId(chatId);
         if(history != null && history.size() > 1){
             history.pop();
-            return history.peek();
+            previousKeyboard = history.peek();
         }
-        else return defaultKeyboard;
+        else
+            previousKeyboard = defaultKeyboard;
+
+        replyMessage.setReplyMarkup(previousKeyboard);
+        messageList.add(replyMessage);
+    }
+
+    private void makeButtonSelected(String buttonText, List<List<InlineKeyboardButton>> keyboardMarkup) {
+        String selectedButtonText = "✔️ " + buttonText;
+        changeButtonText(buttonText, selectedButtonText, keyboardMarkup);
+    }
+
+    private void makeButtonDeselected(String buttonText, List<List<InlineKeyboardButton>> keyboardMarkup) {
+        String selectedButtonText = "✔️ " + buttonText;
+        changeButtonText(selectedButtonText, buttonText, keyboardMarkup);
+    }
+
+    private void changeButtonText(String oldButtonText, String newButtonText, List<List<InlineKeyboardButton>> keyboardMarkup) {
+        for (List<InlineKeyboardButton> row : keyboardMarkup) {
+            for (InlineKeyboardButton button : row) {
+                if (button.getText().equals(oldButtonText)) {
+                    button.setText(newButtonText);
+                }
+            }
+        }
     }
 
 }
